# fasten_run

./: .gitignore  README.md  pyproject.toml
examples/: cli_examples.md  use_cases.py
specs/: container_executor_spec.md
src/container_exec/: __init__.py  cli.py  docker_runtime.py  executor.py  models.py  runtime.py
tests/: test_cli.py  test_docker_runtime.py  test_e2e_docker.py  test_examples.py  test_executor.py
