[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastenrun"
version = "0.1.0"
description = "Execute LLM-generated programs with strict CPU, memory, and time limits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "coverage>=7.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q -m 'not integration'"
markers = [
  "integration: tests that require a working Docker daemon and real container pulls",
]


[project.scripts]
fasten-run = "container_exec.cli:main"
